--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
+        <title>birthdy GIFt</title>
+        <link rel="icon" href="images/brandn3.png">
     </head>
     <body>
         <div id="header">
